feat(car-name, position): car 객체 원시값 포장